<resources>
    <string name="app_name">SmsForward</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="explanation_tv">Ese app serva para hacer la redirección de mensajes SMS para una URL, como si fuese un webhook.\n\n
        Cuando iniciar el app, los mensajes que ya existen en el buzón de entrada no serán enviados, sin embargo los nuevos mensajes que sean de los orígenes configurados serán enviados para las rutas configuradas.\n\n
        Después de hacer clic en el botón de empezar, puedes cerrar la aplicación, pues el procesamiento irá a executar en segundo plano.
    </string>
    <string name="start_button">Empezar</string>
    <string name="stop_button">Encerrar</string>
    <string name="working_running">El servicio esta ejecutando en segundo plano esperando nuevos mensajes.\nPresione el botón "encerrar" para detener el servicio e dejar de observar los SMSs.</string>

    <string name="feature_not_implemented_yet">Opción aún no está lista.</string>

    <!-- MENU -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_mi">Home</string>
    <string name="history_mi">Histórico</string>
    <string name="origins_mi">Orígenes</string>
    <string name="urls_mi">Rutas</string>

    <!-- ORIGINS -->
    <string name="delete_origin_content_description">Elimina el orígen correspondiente.</string>
    <string name="add_origin_dialog_title">Adicionar origen</string>
    <string name="add_origin_edit_text_helper">Origen</string>
    <string name="add_origin_dialog_positive_btn">Salvar</string>
    <string name="add_origin_dialog_negative_btn">Cancelar</string>
    <string name="add_origin_empty_address_error_message">No es posible crear una origen vacía.</string>
    <string name="add_origin_not_numeric_address_error_message">El origen debe contener solamente números.</string>
    <string name="add_origin_success_message">Origin creada con éxito</string>

    <string name="delete_origin_dialog_title">Eliminar origen</string>
    <string name="delete_origin_dialog_message">¿Está seguro que quieres eliminar ese origen?</string>
    <string name="delete_origin_dialog_positive_btn">Eliminar origen</string>
    <string name="delete_origin_dialog_negative_btn">Cancelar</string>

    <!-- INTEGRATION DESTINIES -->
    <string name="delete_integration_destiny_content_description">Elimina la ruta correspondiente</string>
    <string name="edit_integration_destiny_content_description">Edita la ruta correspondiente</string>
    <string name="add_integration_destiny_description_et_hint">Descripción de la ruta</string>
    <string name="add_integration_destiny_url_et_hint">URL de la request</string>
    <string name="add_integration_destiny_headers_hint">Headers de la request separados por punto y coma. Ejemplo: Authorization=Bearer ...; X-custom-header=...</string>
    <string name="add_integration_destiny_dialog_title">Adicionar ruta</string>
    <string name="add_integration_destiny_dialog_positive_btn">Salvar</string>
    <string name="add_integration_destiny_dialog_negative_btn">Cancelar</string>
    <string name="add_integration_destiny_success_message">Ruta creada con éxito</string>

    <string name="update_integration_destiny_success_message">Ruta actualizada con éxito</string>

    <string name="delete_integration_destiny_dialog_title">Eliminar ruta</string>
    <string name="delete_integration_destiny_dialog_message">¿Está seguro que quieres eliminar esa ruta?</string>
    <string name="delete_integration_destiny_dialog_positive_btn">Eliminar ruta</string>
    <string name="delete_integration_destiny_dialog_negative_btn">Cancelar</string>
</resources>