<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeScreen">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp">
            <TextView
                android:id="@+id/home_screen_instructions_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/explanation_tv"
                android:layout_margin="20dp"
                android:textAlignment="center"
            />
            <Button
                android:id="@+id/home_screen_start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button"
                app:layout_constraintTop_toBottomOf="@id/home_screen_instructions_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green"
            />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_screen_service_running_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/home_screen_start_btn"
                android:layout_marginTop="10dp">
<!--                <Button-->
<!--                    android:id="@+id/home_screen_stop_btn"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/stop_button"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
<!--                    app:layout_constraintRight_toRightOf="parent"-->
<!--                    android:backgroundTint="@color/red"-->
<!--                />-->
                <ProgressBar
                    android:id="@+id/home_screen_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@id/home_screen_progress"
                    android:text="@string/working_running"
                    android:textAlignment="center"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>